# sqlite_database_file_dissect

./: .gitignore  .vimspector.json  Cargo.toml  README.md
src/: components.rs  dump.rs  dump_json.rs  http_main.rs  lib.rs  main.rs  utils.rs
src/components/: .database.rs.rustfmt  cell.rs  cell_pointer.rs  database.rs  database_header.rs  file_manager.rs  page.rs  page_header.rs  record.rs
static/: index.html
templates/: page_navigation.tt
test-data/: Chinbook.db.4.analyze.1  Chinbook.db.4.analyze.10  Chinbook.db.4.analyze.100  Chinbook.db.4.analyze.101  Chinbook.db.4.analyze.102  Chinbook.db.4.analyze.103  Chinbook.db.4.analyze.104  Chinbook.db.4.analyze.105  Chinbook.db.4.analyze.106  Chinbook.db.4.analyze.107  Chinbook.db.4.analyze.108  Chinbook.db.4.analyze.109  Chinbook.db.4.analyze.11  Chinbook.db.4.analyze.110  Chinbook.db.4.analyze.111  Chinbook.db.4.analyze.112  Chinbook.db.4.analyze.113  Chinbook.db.4.analyze.114  Chinbook.db.4.analyze.115  Chinbook.db.4.analyze.116  Chinbook.db.4.analyze.117  Chinbook.db.4.analyze.118  Chinbook.db.4.analyze.119  Chinbook.db.4.analyze.12  Chinbook.db.4.analyze.120  Chinbook.db.4.analyze.121  Chinbook.db.4.analyze.122  Chinbook.db.4.analyze.123  Chinbook.db.4.analyze.124  Chinbook.db.4.analyze.125  Chinbook.db.4.analyze.126  Chinbook.db.4.analyze.127  Chinbook.db.4.analyze.128  Chinbook.db.4.analyze.129  Chinbook.db.4.analyze.13  Chinbook.db.4.analyze.130  Chinbook.db.4.analyze.131  Chinbook.db.4.analyze.132  Chinbook.db.4.analyze.133  Chinbook.db.4.analyze.134  (+185 more)
tests/: test_database.rs  test_page.rs  test_utils.rs
(+5 files in other folders)
