[package]
name = "sqlite_database_file_dissect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
integer-encoding = "3.0.2"
hex = "0.4.3"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
