[package]
name = "sqlite_database_file_dissect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="http_main"
path="src/http_main.rs"

[[bin]]
name="dump_json"
path="src/dump_json.rs"

[[bin]]
name="dump"
path="src/dump.rs"

[dependencies]
memmap = "0.7.0"
integer-encoding = "3.0.2"
hex = "0.4.3"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
sqlite_varint = "0.1.2"
tinytemplate = "1.2.1"
serde = "1.0.129"
serde_json = "1.0.71"
serde_derive = "1.0.129"
actix-web = "3"
clap = "2.33.3"
lazy_static = "1.4.0"
actix-files = "0.5.0"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
